create view, request and style for list teacher

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -92,6 +92,8 @@
 @import "components/oneTeacher.styl"
 //// Je veux m’inscrire
 @import "components/inscriptions.styl"
+//// Teachers
+@import "components/index_teachers.styl"
 
 
 // Trumps
