add news icon to iconfont for page stage

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -62,6 +62,10 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "pinterest-only" "\e93d",
                       "vimeo-only" "\e93e",
                       "youtube-only" "\e93f",
+                      "convention" "\e940",
+                      "date" "\e941",
+                      "duration" "\e942",
+                      "formcomplete" "\e943"
 
 
 
