re-update iconfont

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -65,7 +65,8 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "convention" "\e940",
                       "date" "\e941",
                       "duration" "\e942",
-                      "formcomplete" "\e943"
+                      "formcomplete" "\e943",
+                      "pdf" "\e944"
 
 
 
