create style for introduction and buttons internship

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -94,6 +94,8 @@
 @import "components/inscriptions.styl"
 //// Teachers
 @import "components/index_teachers.styl"
+//// Internship
+@import "components/index_internship.styl"
 
 
 // Trumps
