--- a/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
@@ -95,7 +95,46 @@
         transition .3s ease color
 
 
-        
+  .form
+    &__container
+      &:after
+        @extend .clearfix
+    &__wrapper
+      position: relative
+      &--col2
+        width: 47.2%
+      &--left
+        float: left
+      &--right
+        float: right
+    &__input
+      height: s(52)
+      width: 100%
+      display: block
+      padding: 0 s(20)
+      color: $cBlack
+      font-weight: 600
+      border: 1px solid $cWhite2
+      -webkit-appearance: none
+      transition .25s ease border
+      &:focus
+        border 1px solid $cGrey2
+        transition .25s ease border
+    &__label
+      position: absolute
+      top: s(17)
+      padding: 0 s(20)
+      display: block
+      transition: 0.3s ease all
+      transition-property: top, font-size
 
-
+  .form__label.active
+    top s(5, $sz9)
+    font-size s($sz9)
+    padding 0 s(20, $sz9)
+    transition .3s ease all
+    transition-property top, font-size
+  .form__label.active ~  .floatLabel
+    padding-top s(12)
+    line-height 0
 
