--- a/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
@@ -69,11 +69,13 @@
       height s(143)
       border 1px solid $cGrey5
       border-radius 2px
+      transition .3s ease border
       &__label
         font-size s($sz10)
         font-weight: 700
         letter-spacing .3px
         color $cGrey5
+        transition .3s ease color
         &:before
           setIconBase()
           display: block
@@ -93,6 +95,18 @@
       & .form__button__label
         color $cBlueCiel
         transition .3s ease color
+    &__button:hover
+      border 1px solid $cBlack
+      transition .3s ease border
+      & .form__button__label
+        color $cBlack
+        transition .3s ease color
+    &__button--active:hover
+      border 1px solid $cBlueCiel
+      & .form__button__label
+        color $cBlueCiel
+
+
 
 
   .form
@@ -108,6 +122,7 @@
       &--right
         float: right
     &__block
+      position: relative
       margin-bottom s(15)
       &:after
         @extend .clearfix
@@ -191,6 +206,45 @@
       transition .3s ease background
     &__checkbox:checked ~ .form__control-indicator:after
       display: block
+    &__labelTextarea
+      position: absolute
+      top: s(18)
+      left s(20)
+    &__textarea
+      width: 100%
+      height s(180)
+      border: 1px solid $cWhite2;
+      padding: s(50) s(20) s(20)
+      color: $cBlack
+      font-weight: 600;
+      line-height: 1.3em
+      transition .25s ease border
+      &:focus
+        outline none
+        border 1px solid $cGrey2
+        transition .25s ease border
+    &__wrapperTextarea
+      &:before
+        content ''
+        position: absolute
+        display: block
+        top 1px
+        width 100% - 1px
+        height 40px
+        background-color $cWhite
+        margin-left: auto
+        margin-right: auto
+        left 0
+        right: 0
+    &__submit-container
+      position: relative
+    &__submit
+      margin-top s(20, $sz8)
+      @extend .buttonLeftToRight
+      position: relative
+      font-size s($sz8)
+      font-weight: 900
+      letter-spacing 1.3px
 
   .form__label.active
     top s(5, $sz9)
