create form validation error for contact form full

--- a/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_internship.styl
@@ -320,3 +320,24 @@
   .internship &
     .tab
       display: block
+
+/************************************\
+		ERRORS
+\************************************/
+
+.internship &
+  .form-error
+    text-align left
+    margin-bottom 5px
+  .error-input
+  .error-input:focus
+    border 1px solid $cError
+  .form-float-left
+    .form-error
+      position: absolute
+      top: -31px
+  .form-float-right
+    .form-error
+      position: absolute
+      top: -31px
+      right 0
