add js for style google maps

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -91,7 +91,7 @@
 //// OneTeacher
 @import "components/oneTeacher.styl"
 //// Je veux m’inscrire
-@import "components/inscriptions.styl"
+@import "components/index_registration.styl"
 //// Teachers
 @import "components/index_teachers.styl"
 //// Internship
