--- a/ecoleinfographie/resources/assets/stylus/components/index_registration.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_registration.styl
@@ -37,7 +37,7 @@
 // location
 .insLocation
   background $cWhite
-  padding s(60) 0 s(120) 0
+  padding s(60) 0 s(60) 0
   &__wrapper
     @extend .containerGridz
   &__title
@@ -49,7 +49,6 @@
     &:last-child
       margin-bottom: 0
   &__when
-    margin-bottom s(75)
     &__title
       display: block
       @extend .titleExtraBold26
@@ -115,13 +114,12 @@
 
 .insDossier
   @extend .containerGridz
-  box-sizing border-box
   position: relative
   &:after
     @extend .clearfix
   &__wrapper
     max-width s(610)
-    float: left
+    float: right
     padding s(60) 0
   &__title
     display: block
@@ -143,11 +141,11 @@
 .insHelp
   position: absolute
   top: 0
-  right: 0
+  left: 0
   height: 100%
-  width s(505)
+  width s(570)
   background $cBlue1
-  padding s(60) s(50)
+  padding s(60) s(60)
   &__title
     display: block
     @extend .titleExtraBold26
