--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -219,6 +219,7 @@
     padding-bottom 0
     left s(211, 16)
     border-bottom s(14, 16) inset $cBlueGreyLight
+    box-shadow: 0 s(50, 16) s(100, 16) rgba(50,50,93,.1), 0 15px 35px rgba(50,50,93,.15), 0 s(5, 16) s(15, 16) rgba(0,0,0,.1);
     & a
       Catamaran(17, 16, 500, 1.2)
       color $cBlueCiel
