code top wrapper contact

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -96,6 +96,8 @@
 @import "components/index_teachers.styl"
 //// Internship
 @import "components/index_internship.styl"
+//// Contact
+@import "components/index_contact.styl"
 
 
 // Trumps
