--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -1,9 +1,9 @@
 html
   overflow-x: hidden;
-  background-image url("../img/gridinator.png")
+/*  background-image url("../img/gridinator.png")
   background-repeat repeat-y
   background-position center center
-  background-size 1240px
+  background-size 1240px*/
   //background #FFF
   //opacity 0.9
 
