--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -66,7 +66,12 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "date" "\e941",
                       "duration" "\e942",
                       "formcomplete" "\e943",
-                      "pdf" "\e944"
+                      "pdf" "\e944",
+                      "location-contact" "\e945",
+                      "mail-contact" "\e946",
+                      "phone-contact" "\e947"
+
+
 
 
 
