--- a/ecoleinfographie/resources/assets/stylus/components/index_contact.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/index_contact.styl
@@ -48,3 +48,17 @@
       margin-right s(10)
       &:last-child
         margin-right: 0
+
+  .map
+    &__container
+      position: relative;
+      padding: 6.25em 0 3.75em;
+      height s(480)
+    &__canvas
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 750px
+      right: 0
+      //margin-left: -830px;
+      z-index: 0;
