--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -56,6 +56,7 @@
 @import "components/_card-student.styl"
 @import "components/_social-list-circle.styl"
 @import "components/_load-more.styl"
+@import "components/_form.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
