styl hheader news

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -99,6 +99,10 @@
 @import "components/index_internship.styl"
 //// Contact
 @import "components/index_contact.styl"
+//// News
+@import "components/news/featured.styl"
+@import "components/news/card.styl"
+@import "components/news/index_news.styl"
 
 
 // Trumps
