--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -170,3 +170,12 @@
   background #0B526B
   &__title
     @extend .hidden
+
+
+/************************************\
+		HEADER NEWS
+\************************************/
+
+.header-news
+  background: #606c88
+  background: linear-gradient(to right, #606c88, #3f4c6b)
