correct bug with tag time

--- a/ecoleinfographie/resources/assets/stylus/components/news/featured.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/featured.styl
@@ -34,7 +34,7 @@
       margin-bottom s(27)
       color $cSchool - 25%
       font-size s($sz8)
-      & date
+      & time
         font-size s($sz8, $sz8)
         color $cSchool - 25%
     &__title
