create style for news cards

--- a/ecoleinfographie/resources/assets/stylus/components/news/index_news.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/index_news.styl
@@ -3,3 +3,8 @@
   .container
   .container:before
     background-color $cBackgroundGrey2
+
+.news
+  &-container
+    @extend .containerGridz
+    padding-top s(150)
