modify gradient header

--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -177,5 +177,6 @@
 \************************************/
 
 .header-news
-  background: #606c88
-  background: linear-gradient(to right, #606c88, #3f4c6b)
+  background: #5f2c82
+  background: -webkit-linear-gradient(to left, #49a09d, #5f2c82)
+  background: linear-gradient(to left, #49a09d, #5f2c82)
