outsource somes parts in partials

--- a/ecoleinfographie/resources/assets/stylus/components/news/card.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/card.styl
@@ -32,6 +32,7 @@
     position absolute
     top s(50)
     right: s(190)
+    transition .3s ease right
   &__time
     position: absolute
     bottom s(25)
@@ -42,6 +43,7 @@
     color $cBlueTitles
     font-size s($sz8)
     font-weight bold
+    transition .3s ease right
   &__link
     @extend .cover
     z-index 2
