filling article featured

--- a/ecoleinfographie/resources/assets/stylus/components/news/featured.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/featured.styl
@@ -45,6 +45,7 @@
       letter-spacing 1.11px
       line-height: 1.1em
     &__excerpt
+    & p
       font-size s($sz8)
       line-height: 1.62em
       margin-bottom s(30, $sz8)
