correct bug link on a article

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -103,6 +103,7 @@
 @import "components/news/featured.styl"
 @import "components/news/card.styl"
 @import "components/news/index_news.styl"
+@import "components/news/post_news.styl"
 
 
 // Trumps
