out file wysiwyg

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -57,6 +57,7 @@
 @import "components/_social-list-circle.styl"
 @import "components/_load-more.styl"
 @import "components/_form.styl"
+@import "components/_wysiwyg.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
