--- a/ecoleinfographie/resources/assets/stylus/components/news/post_news.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/post_news.styl
@@ -31,3 +31,7 @@
       max-width s(684)
       margin-left auto
       padding-right s(50)
+      & img
+        position relative
+        margin s(40) 0
+        left -200px
