add commentaires ton admin

--- a/ecoleinfographie/resources/assets/stylus/components/news/post_news.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/news/post_news.styl
@@ -35,3 +35,11 @@
         position relative
         margin s(40) 0
         left -200px
+
+  .comments
+    margin-top s(200)
+  .footer__container
+    margin-top: 0
+  .blog-pagination
+    margin s(70) auto 0 auto
+    max-width 100%
