--- a/ecoleinfographie/resources/assets/stylus/components/header.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/header.styl
@@ -20,12 +20,13 @@
       display block
       height: 100%;
       Catamaran($text-XXXXL, 16, 700, 1.1)
-      background url("../img/header-home-background.jpg") no-repeat center center/cover
+      color $cWhite
+      /*background url("../img/header-home-background.jpg") no-repeat center center/cover
       -webkit-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color: transparent;
       transform translateZ(0)
-      filter: brightness(1.3);
+      filter: brightness(1.3);*/
     &__strong
       padding-top 250px
       margin-bottom s(30, 64.85)
