--- a/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
@@ -1,7 +1,7 @@
 .home
   .intro
     box-sizing content-box
-    padding s(150, 16) s($paddingSideGlobal, 16) 0
+    padding s(150) s($paddingSideGlobal) 0
     background-color $cWhite
     z-index 1
     overflow hidden
@@ -15,7 +15,7 @@
       margin-bottom s(30, $text-bigTitleHome)
       @extend .title51
     &__text
-      margin-bottom s(50, 16)
+      margin-bottom s(30)
       @extend .paragraph21
     &__link
       @extend .linkArrowLarge
