--- a/ecoleinfographie/resources/assets/stylus/base/_links.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_links.styl
@@ -34,13 +34,13 @@
   position: absolute
   display: inline-block
   font-weight bold
-  font-size s($text-L)
-  font-weight 700
-  padding s(18, $text-L) s(57, $text-L)
+  font-size s($sz10)
+  font-weight 900
+  padding s(25, $sz10) s(45, $sz10)
   background-color $cBlueCiel
   color $cWhite
   text-transform: uppercase
-  letter-spacing 1px
+  letter-spacing 1.15px
   z-index 1
   &:before
     content: '';
