style bloc last articles in home

--- a/ecoleinfographie/resources/assets/stylus/base/_links.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_links.styl
@@ -31,7 +31,7 @@
 \************************************/
 
 .buttonLeftToRight
-  position: absolute
+  position: relative
   display: inline-block
   font-weight bold
   font-size s($sz10)
