modify style button portfolio home

--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -104,7 +104,7 @@
         position: absolute
         bottom: s(-20)
         right s(30)
-        buttonLeftToRight($sz-textSL)
+        @extend .buttonLeftToRight
         z-index 300
       &__excerpt
         @extend .paragraph18
