modify js for slider pro home

--- a/ecoleinfographie/resources/assets/stylus/components/_dots.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_dots.styl
@@ -38,6 +38,7 @@
     &:focus
       box-shadow: inset 0 0 0 2px rgba(19, 106, 128, 0.6)
   &__li.current .dots__item
+  &__li .dots__item.current
     transition .6s ease all
     transition-property transform, box-shadow
     transform translateZ(0)
