--- a/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/pros-home.styl
@@ -200,4 +200,6 @@
     transition .4s ease all
   & .slider-pros__image img
     transform translate3D(100%, 0, 0)
+  & .slider-pros__description__link
+    visibility hidden
 
