add microdatas footer

--- a/ecoleinfographie/resources/assets/stylus/components/footer.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/footer.styl
@@ -92,6 +92,10 @@
         font-size: s($text-L)
         margin-bottom s(15, $text-L)
         color $cGreyFooter
+        & span
+          display: inline-block
+          font-size 21.25px
+          margin-bottom: 0
     &__tel
     &__contact
       display: block
