fix cta style navigation

--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -39,14 +39,14 @@
       transition .3s ease opacity
     &--cta
       position: relative
-      margin-left s(40, $sz-menu)
-      padding s(21,$sz-menu) s(50, $sz-menu) s(24,$sz-menu)
+      margin-left s(40, 13)
+      padding s(20,13) s(35, 13) /*s(24,$sz-menu)*/
       background-color rgba(255,255,255,0.10)
       font-size s(13)
       font-weight: 900
-      letter-spacing 1.5px
+      letter-spacing 2px
       border 2px solid $cWhite
-      //border-radius s(5, $sz-menu)
+      border-radius 2px
       text-transform: uppercase
       &:hover
       &:focus
