--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -119,6 +119,7 @@
     clear left
   &__jobs
     box-shadow: 0 s(50, 16) s(100, 16) rgba(50,50,93,.1), 0 15px 35px rgba(50,50,93,.15), 0 s(5, 16) s(15, 16) rgba(0,0,0,.1);
+    color: #000
     &__job
       display: inline-block
       &__title
@@ -285,3 +286,78 @@
       transform translateY(-1px) scale(1.4)
       transition .3s ease transform
 
+
+/************************************\
+		RESPONSIVE
+\************************************/
+@media screen and (max-width: 1200px)
+  .subnav
+    &__jobs
+      left s(238)
+      &:before
+        margin-left: s(49)
+    &__school
+      left s(380)
+      &:before
+        margin-left s(22)
+
+@media screen and (max-width: 1080px)
+  .menu
+    display: none
+  .hamburger
+    width: s(35)
+    height: s(24)
+    position: relative
+    transform: rotate(0deg)
+    transition: .5s ease-in-out
+    cursor: pointer
+    & span
+      display: block
+      position: absolute
+      height: s(2)
+      width: 100%
+      background: $cWhite
+      border-radius: s(10)
+      opacity: 1
+      left: 0
+      transform: rotate(0deg)
+      transition: .25s ease-in-out
+      &:nth-child(1)
+        top 0
+        left initial
+        right 0
+        width 75%
+      &:nth-child(2)
+      &:nth-child(3)
+        top s(10)
+        right 0
+        left initial
+        width 60%
+      &:nth-child(4)
+        top s(20)
+        right 0
+        left initial
+        width 100%
+
+  .hamburger:hover
+    & span
+      width 100%
+
+  .hamburger.open span:nth-child(1)
+  .hamburger.open span:nth-child(4)
+    width: 0
+    left: 0
+    opacity: 0
+    right auto
+    background rgba(255,255,255,0)
+    top 12px
+  .hamburger.open span:nth-child(2)
+    transform: rotate(45deg)
+    left 0
+    right auto
+    width 100%
+  .hamburger.open span:nth-child(3)
+    transform: rotate(-45deg)
+    left 0
+    right auto
+    width 100%
