--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -497,6 +497,10 @@ div .menu__title-responsive
       background $cBlueCiel + 10%
       transition .3s ease background
 
+  .menu__title-responsive
+  div .menu__title-responsive
+  .hamburger
+    display: block
 
   // Hover links in menu responsive
   .subnav__jobs__job
@@ -524,3 +528,63 @@ div .menu__title-responsive
     transition 0s 0s all ease
 
 
+// Position menu
+@media screen and (max-width: 1080px)
+  .menu
+    overflow-x: auto
+    transform translateX(s(300))
+    transition .3s cubic-bezier(.25,.46,.45,.94) transform
+    translate3D(0,0,0)
+  .hamburger
+    transform translateX(0)
+    transition .3s cubic-bezier(.25,.46,.45,.94) transform
+
+  .overlay
+    display: block;
+    transform translateX(0)
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: transparent;
+    z-index: -1
+    transition .3s cubic-bezier(.25,.46,.45,.94) transform
+    background-color: rgba(0,0,0,.5);
+
+
+  .menu-responsive
+    .menu
+      transition .3s cubic-bezier(.25,.46,.45,.94) transform
+      transform translateX(s(0));
+    .hamburger
+      transition .3s cubic-bezier(.25,.46,.45,.94) transform
+      z-index 1010
+      transform translateX(s(-300))
+    .overlay
+      position: fixed;
+      background-color: rgba(0,0,0,.5);
+      transform translateX(s(-300))
+      transition .3s cubic-bezier(.25,.46,.45,.94) transform
+
+  body.menu-responsive
+    overflow hidden
+    /*position fixed*/
+  .menu-responsive
+    .overlay
+      transform translateX(s(-300))
+      background-color: rgba(0,0,0,.5);
+      z-index 1000
+      transition .3s cubic-bezier(.25,.46,.45,.94) transform
+
+
+.no-scroll
+  overflow hidden
+  height 100%
+  & body
+    overflow hidden
+    height 100%
+
+@media screen and (max-width: 400px)
+  .menu-responsive
+    .hamburger
+      display: none
