fix little bug menu responsive

--- a/ecoleinfographie/resources/assets/stylus/components/navigation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/navigation.styl
@@ -412,6 +412,7 @@ div .menu__title-responsive
       text-transform: uppercase
       border-bottom 1px solid #1A2C3F
       border-top 1px solid #1A2C3F
+      background $cBlueTitles + 5%
       &:after
         content ''
         display: block
