--- a/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/intro.styl
@@ -1,26 +1,47 @@
 .home
   .intro
+    position relative
     box-sizing content-box
     padding s(150) s($paddingSideGlobal) 0
     background-color $cWhite
     z-index 1
     overflow hidden
     clearfix(both)
+    @media screen and (max-width 980px)
+      padding s(150) s(20) s(70)
     &__content
       float left
       width col(5, $ws_iGridzColumns)
       clearfix(both)
+      @media screen and (max-width 1024px)
+        width 100%
     &__title
       max-width s(375, $text-bigTitleHome)
       margin-bottom s(30, $text-bigTitleHome)
       @extend .title51
+      @media screen and (max-width 1134px)
+        font-size s($sz11)
+      @media screen and (max-width 1024px)
+        max-width none
     &__text
       margin-bottom s(30)
       @extend .paragraph21
+    &__item:last-child
+      @media screen and (max-width 1134px)
+        margin-bottom s(50, $sz6)
     &__link
       @extend .linkArrowLarge
       margin-bottom s(20, $text-L)
+      &:last-child
+        margin-bottom s(20, $sz6)
     &__img
       float right
       max-width 100%
       height auto
+      @media screen and (max-width 1134px)
+        width 45%
+        position absolute
+        bottom 0
+        right s($paddingSideGlobal)
+      @media screen and (max-width 1024px)
+        display: none
