responsive news-home

--- a/ecoleinfographie/resources/assets/stylus/base/_links.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_links.styl
@@ -15,6 +15,8 @@
     font-size s(12, $text-L)
     margin-left  s(10, 12)
     transition .2s ease transform
+    @media screen and (max-width 980px)
+      display inline
   &:hover
   &:focus
     color $cBlack
