--- a/ecoleinfographie/resources/assets/stylus/components/home/news-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/home/news-home.styl
@@ -2,23 +2,44 @@
   .news-home
     position: relative
     background $cBackgroundGrey2
+    @media screen and (max-width 980px)
+      z-index 2
     &__container
       max-width s(1050)
       margin 0 auto
       padding s(150) s($paddingSideGlobal)
       baseShawl($cBackgroundGrey2, 4.5deg)
       box-sizing content-box
+      @media screen and (max-width 980px)
+        padding s(50) s(20) s(130)
+      @media screen and (max-width 520px)
+        padding s(50) s(20) s(160)
     .news-card
+      @media screen and (max-width 1080px)
+        min-height 0
       &__content
         width s(735)
+        @media screen and (max-width 1080px)
+          min-height 0
+          width 100%
       &__image
         right s(12)
+        @media screen and (max-width 1080px)
+          display: none
       &__title
         max-width s(385, $sz4)
         width auto
+        @media screen and (max-width 1080px)
+          max-width none
+        @media screen and (max-width 520px)
+          font-size s($sz5)
+          letter-spacing .5px
+          margin-bottom s(10, $sz5)
       &__excerpt
         max-width s(385, $sz8)
         width auto
+        @media screen and (max-width 1080px)
+          max-width none
     .news-card:hover .news-card__image
       right s(32)
       transition .3s ease right
@@ -34,3 +55,16 @@
     top s(30, $sz10)
     margin-left s(170, $sz10)
     z-index 10
+    @media screen and (max-width 1080px)
+      position absolute
+      max-width s(296, $sz10)
+      bottom s(-50)
+      left 0
+      right 0
+      margin-left auto
+      margin-right auto
+      top auto
+    @media screen and (max-width 520px)
+      bottom s(-90)
+      padding s(25, $sz10) s(15, $sz10)
+      max-width s(240, $sz10)
